--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/jqplot/jquery.jqplot.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-chart/src/chart.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container" role="main">
-    <div ng-view></div>
+    <div ui-view=""></div>
 </div>
 </body>
 </html>
