Migrating from ngRoute to ui-router

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#/add">Overview</a></li>
+                <li><a ui-sref="home" >Overview</a></li>
                 <li><a href="#">About</a></li>
             </ul>
         </div>
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container" role="main">
-    <div ui-view=""></div>
+    <div ui-view></div>
 </div>
 </body>
 </html>
